tests/spec/fail/re_use_after_close.aja
import (
    "modules/re"
)

r = re.compile("a+")
r.close()
print(r.isMatch("aaa"))
